# sgy

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  sgy
.github/workflows/: auto-tag.yml
docs/superpowers/plans/: 2026-04-10-homework-scraping.md
docs/superpowers/specs/: 2026-04-10-homework-scraping-design.md
sgy_cli/: __init__.py  __main__.py  cli.py
tests/: test_summary.py
