[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sgy"
version = "0.4.2"
description = "Schoology parent portal CLI scraper"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.12",
]

[project.scripts]
sgy = "sgy_cli.cli:main"
